@@ -4,7 +4,7 @@
 <table>
   <tr>
     <th><?php zm_l10n('ID') ?></th>
-    <th><?php zm_l10n('Customer') ?></th>
+    <th><?php zm_l10n('Account') ?></th>
     <th><?php zm_l10n('Order Date') ?></th>
     <th><?php zm_l10n('Payment') ?></th>
     <th><?php zm_l10n('Shipping') ?></th>
@@ -13,7 +13,9 @@
   <?php foreach ($resultList->getResults() as $order) { ?>
     <tr>
       <td><?php echo $order->getId() ?></td>
-      <td><?php echo $order->getAccount()->getFullName() ?></td>
+      <?php $actualAccount = ZMAccounts::instance()->getAccountForId($order->getAccountId()); ?>
+      <?php $name = $actualAccount->getType() == ZMAccount::REGISTERED ? $order->getAccount()->getFullName() : zm_l10n_get('** Guest **'); ?>
+      <td><a href="<?php echo $admin2->url('account', 'accountId='.$order->getAccountId()) ?>"><?php echo $name ?></a></td>
       <td><?php echo $order->getOrderDate() ?></td>
       <td><?php echo $order->get('payment_method') ?></td>
       <td><?php echo $order->get('shipping_method') ?></td>
