@@ -156,7 +156,7 @@ class Session extends ZMObject { //ZMSession {
      *
      * @return char The session type.
      */
-    public function getType() { return array_key_exists('account_type', $_SESSION) ? $_SESSION['account_type'] :ZMZenCartAccountSacsHandler ::ANONYMOUS; }
+    public function getType() { return array_key_exists('account_type', $_SESSION) ? $_SESSION['account_type'] : ZMAccount ::ANONYMOUS; }
 
     /**
      * Returns <code>true</code> if the user is not logged in at all.
@@ -165,7 +165,7 @@ class Session extends ZMObject { //ZMSession {
      *
      * @return boolean <code>true</code> if the current user is anonymous, <code>false</code> if not.
      */
-    public function isAnonymous() { return !array_key_exists('account_type', $_SESSION) || ZMZenCartAccountSacsHandler::ANONYMOUS == $_SESSION['account_type']; }
+    public function isAnonymous() { return !array_key_exists('account_type', $_SESSION) || ZMAccount::ANONYMOUS == $_SESSION['account_type']; }
 
     /**
      * Returns <code>true</code> if the user is a guest user.
@@ -174,7 +174,7 @@ class Session extends ZMObject { //ZMSession {
      *
      * @return boolean <code>true</code> if the current user is an guest, <code>false</code> if not.
      */
-    public function isGuest() { return array_key_exists('account_type', $_SESSION) && ZMZenCartAccountSacsHandler::GUEST == $_SESSION['account_type']; }
+    public function isGuest() { return array_key_exists('account_type', $_SESSION) && ZMAccount::GUEST == $_SESSION['account_type']; }
 
     /**
      * Returns <code>true</code> if the user is a registered user.
@@ -183,7 +183,7 @@ class Session extends ZMObject { //ZMSession {
      *
      * @return boolean <code>true</code> if the current user is registered, <code>false</code> if not.
      */
-    public function isRegistered() { return array_key_exists('account_type', $_SESSION) && ZMZenCartAccountSacsHandler::REGISTERED == $_SESSION['account_type']; }
+    public function isRegistered() { return array_key_exists('account_type', $_SESSION) && ZMAccount::REGISTERED == $_SESSION['account_type']; }
 
     /**
      * Set the account for the current session.
