@@ -33,7 +33,7 @@
 <p><?php zm_l10n("Dear %s %s,", $currentAccount->getFirstName(), $currentAccount->getLastName()) ?></p>
 
 <p><?php zm_l10n("This is to inform you that your order #%s has been updated.", $currentOrder->getId()) ?></p>
-<?php if (ZMZenCartAccountSacsHandler::REGISTERED == $currentAccount->getType()) {
+<?php if (ZMAccount::REGISTERED == $currentAccount->getType()) {
     $href = '<a href="'.$net->url(FILENAME_ACCOUNT_HISTORY_INFO, 'order_id='.$currentOrder->getId(), false).'">'.zm_l10n_get("order #%s", $currentOrder->getId()).'</a>';
 } else {
     $href = '<a href="'.$net->url('guest_history').'">'.zm_l10n_get("order #%s", $currentOrder->getId()).'</a>';
