@@ -80,6 +80,8 @@ Release 0.9.10
   being a default mapping and mappings: being explicit mappings
 - change returned data type of ZMOrders::getOrderStatusList from ZMObject to
   ZMOrderStatus
+- move REGISTERED, GUEST and ANONYMOUS consts to ZMAccount, mark deprecated in
+  ZMZenCartSacsHandler
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
